--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,5 @@
+{% extends "polls/base.html" %}
+{% block content %}
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
@@ -11,3 +13,4 @@
 {% else %}
 <p>No polls are available.</p>
 {% endif %}
+{% endblock %}
